# vroomgis

./: .gitignore  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: linux-build.yml
GDAL/: GDALmake.opt  GDALmake.opt.in
GDAL/frmts/: gdalallregister.cpp  makefile.vc
GDAL/frmts/c2d/: GNUmakefile  c2ddataset.cpp  makefile.vc
GDAL/gcore/: gdal_frmts.h
app/vroomdrawer/: CMakeLists.txt
app/vroomdrawer/art/: vroomdrawer_toolbmp.cpp  vroomdrawer_toolbmp.h
app/vroomdrawer/resources/: vroomdrawer.fbp
app/vroomdrawer/src/: frame.cpp  frame.h  frameabout.cpp  frameabout.h  resource.rc  vrlayervectorstar.cpp  vrlayervectorstar.h  vrmemorylayerdialog.cpp  vrmemorylayerdialog.h
app/vroomloader/: CMakeLists.txt
app/vroomloader/resources/: vroomloader.fbp
app/vroomloader/src/: frame.cpp  frame.h  resource.rc  tmlog.h  vrdisplayvalue.cpp  vrdisplayvalue.h
app/vroomtwin/: CMakeLists.txt
app/vroomtwin/ressources/: vroomtwin.fbp
app/vroomtwin/src/: frame.cpp  frame.h  resource.rc  tmlog.h
art/: vroomgis_bmp.cpp
cmake/: vrversion.cmake
doc/: Doxyfile  compilation_libraries.md
plugins/lscrashreport/src/: lscrashreport.cpp  lscrashreport.h  lscrashreport_param.h.in
plugins/lsversion/doc/: lsversiondlg.fbp
plugins/lsversion/src/: lsversion_core.cpp  lsversion_core.h  lsversion_dlg.cpp  lsversion_dlg.h  lsversion_param.h.in
scripts/: build_vroomgis_apps.py  build_vroomgis_tests.py  cache_test.txt  cmbui.py  linux-home.py  linux_update_apps.sh  linux_update_wxWidgetsSVN.sh  mac_update_apps.command  mac_update_test.command  mac_update_wxWidgetsSVN-DBG.command  mac_update_wxWidgetsSVN.command  macbook.py  macpro-unil.py  update_vroomgis.py  win_update_apps.bat  win_update_tests.bat  win_update_wxwidgets-SVN.bat  windows-7.py
scripts/performance/: perfgraphics.py
src/: vrcoordinate.cpp  vrcoordinate.h  vrdisplaytool.cpp  vrdisplaytool.h  vrdriver.cpp  vrdriver.h  vrevent.h  vrlabel.cpp  vrlabel.h  vrlayer.h  vrlayermanager.cpp  vrlayermanager.h  vrlayerraster.cpp  vrlayerraster.h  vrlayerrasterc2d.cpp  vrlayerrasterc2d.h  vrlayervector.cpp  vrlayervector.h  vroomgis.h  vrrealrect.cpp  vrrealrect.h  vrrender.cpp  vrrender.h  vrrenderer.cpp  vrrenderer.h  vrrubberband.cpp  vrviewerdisplay.cpp  vrviewerdisplay.h  vrviewerlayermanager.cpp  vrviewerlayermanager.h  vrviewertoc.cpp  vrviewertoc.h
test/: CMakeLists.txt
test/app/drawspeedtest/: CMakeLists.txt  main.cpp
test/data/: fluss_poly_combioula.sbn  fluss_poly_combioula.sbx  fluss_poly_combioula.shp  fluss_poly_combioula.shx  gwn_combioula.dbf  gwn_combioula.sbn  gwn_combioula.sbx  gwn_combioula.shp  gwn_combioula.shx  mntj.jpg.aux.xml  mntmo.aux  mntmo.tif  mntmo.tif.aux.xml  profile.shp  profile.shx
test/src/: SimpleTest.h  fake_vrviewerdisplay.cpp  fake_vrviewerdisplay.h  main.cpp  test_param.h  test_param.h.in  test_setup.cpp  test_setup.h  test_vrcoordinate.cpp  test_vrcoordinate.h  test_vrdriver.cpp  test_vrdriver.h  test_vrlabel.cpp  test_vrlabel.h  test_vrlayermanager.cpp  test_vrlayermanager.h  test_vrlayerrasterC2D.cpp  test_vrlayerrasterC2D.h  test_vrlayerrasterGDAL.cpp  test_vrlayerrasterGDAL.h  test_vrlayervectorOGR.cpp  test_vrlayervectorOGR.h  test_vroperationvector.cpp  test_vroperationvector.h  test_vrrealrect.cpp  test_vrrealrect.h  test_vrrender.cpp  test_vrrender.h  test_vrrenderc2pdips.cpp  test_vrrenderc2pdips.h  test_vrrenderer.cpp  test_vrrenderer.h  test_vrrubberband.cpp  test_vrrubberband.h  test_vrviewerlayermanager.cpp  test_vrviewerlayermanager.h  vrlayermanager_test.h
test_app/drawspeedtest/: CMakeLists.txt
test_app/drawspeedtest/src/: main.cpp
vroomgis/: CMakeLists.txt
vroomgis/art/: vroomgis.icns  vroomgis.xpm  vroomgis_bmp.cpp  vroomgis_bmp.h  vroomgis_toolbmp.cpp  vroomgis_toolbmp.h
vroomgis/src/: tmpercent.cpp  tmpercent.h  vrbitmaps.cpp  vrbitmaps.h  vrcoordinate.cpp  vrcoordinate.h  vrdisplaytool.cpp  vrdisplaytool.h  vrdriver.cpp  vrdriver.h  vrevent.h  vrlabel.cpp  vrlabel.h  vrlabelc2p.cpp  vrlabelc2p.h  vrlayer.cpp  vrlayer.h  vrlayermanager.cpp  vrlayermanager.h  vrlayerraster.cpp  vrlayerraster.h  vrlayerrasterc2d.cpp  vrlayerrasterc2d.h  vrlayervector.cpp  vrlayervector.h  vrlayervectorc2p.cpp  vrlayervectorc2p.h  vrlayervectorsc2dp.cpp  vrlayervectorsc2dp.h  vrlayervectorsc2p.cpp  vrlayervectorsc2p.h  vroomgis.h  vroperationvectorprofiler.cpp  vroperationvectorprofiler.h  vrperformance.cpp  vrperformance.h  vrprogress.cpp  vrprogress.h  vrrealrect.cpp  vrrealrect.h  (+22 more)
